--- a/package.json
+++ b/package.json
@@ -3,11 +3,35 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "watch": "vite build --watch"
     },
     "devDependencies": {
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
-        "vite": "^5.0.0"
+        "vite": "^5.0.0",
+        "lodash": "^4.17.19",
+        "postcss": "^8.1.14",
+        "sass": "^1.66.1"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.4.2",
+        "@fortawesome/free-solid-svg-icons": "^6.4.2",
+        "@fortawesome/vue-fontawesome": "^3.0.3",
+        "@vitejs/plugin-vue": "^4.3.3",
+        "@vueform/multiselect": "^2.6.7",
+        "@vueform/vueform": "^1.9.5",
+        "boostrap": "^2.0.0",
+        "datatables.net-bs5": "^1.13.6",
+        "datatables.net-vue3": "^2.1.3",
+        "pinia": "^2.1.6",
+        "pinia-plugin-persistedstate-2": "^2.0.14",
+        "startbootstrap-sb-admin": "^7.0.7",
+        "sweetalert2": "^11.7.27",
+        "toastr": "^2.1.4",
+        "vue": "^3.2.36",
+        "vue-loader": "^17.2.2",
+        "vue-router": "^4.2.4",
+        "vue-toast-notification": "^3.1.1"
     }
 }
