--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:xKx1cAUJfS3q5q1noWhj/CUk9t2bnrYAwV7HX1nYlUI=
 APP_DEBUG=true
 # APP_URL=http://rapidv:9004/ #for debug only
-APP_URL=http:localhost
+APP_URL=WiseEducationV6.us-east-1.elasticbeanstalk.com
 
 
 LOG_CHANNEL=stack
