Virtual Box | Docker Config > nginx config > LAMP > PHP 8.3 >

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 APP_NAME=Laravel
-APP_ENV=local
 APP_KEY=base64:xKx1cAUJfS3q5q1noWhj/CUk9t2bnrYAwV7HX1nYlUI=
 APP_DEBUG=true
+APP_URL= http://localhost
 # APP_URL=http://rapidv:9004/ #for debug only
-APP_URL=WiseEducationV6.us-east-1.elasticbeanstalk.com
+# APP_URL=WiseEducationV6.us-east-1.elasticbeanstalk.com
 
 
 LOG_CHANNEL=stack
@@ -12,11 +12,11 @@ LOG_LEVEL=debug
 
 #failed connection to localhost php myadmin
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_HOST=192.168.1.100
+DB_PORT=3307
 DB_DATABASE=db_wise_education
-DB_USERNAME=wiseeducation
-DB_PASSWORD=wiseeducation12345
+DB_USERNAME=root
+DB_PASSWORD=root
 
 # DB_CONNECTION=mysql
 # DB_HOST=192.168.3.5
