--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_KEY=base64:xKx1cAUJfS3q5q1noWhj/CUk9t2bnrYAwV7HX1nYlUI=
 APP_DEBUG=true
 APP_URL= http://localhost
-# APP_URL=http://rapidv:9004/ #for debug only
+# APP_URL=http://pixelx:9004/ #for debug only
 # APP_URL=WiseEducationV6.us-east-1.elasticbeanstalk.com
 
 
@@ -10,7 +10,6 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-#failed connection to localhost php myadmin
 DB_CONNECTION=mysql
 DB_HOST=192.168.1.100
 DB_PORT=3307
