Change APP_URL | Accessing Hot Reload without addding some function in vite config can access the hot reload change the APP_URL from localhost to hostname eg. pixel:9004 this is for docker project

--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
 APP_NAME=Laravel
 APP_KEY=base64:xKx1cAUJfS3q5q1noWhj/CUk9t2bnrYAwV7HX1nYlUI=
 APP_DEBUG=true
-APP_URL= http://localhost:9004
-# APP_URL=http://pixelx:9004/ #for debug only
+APP_URL= http://pixelx:9004 #Vite Hot Reload can access using this
 # APP_URL=WiseEducationV6.us-east-1.elasticbeanstalk.com
 
 
