Create Alias to Text Resource DataTable

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "juststeveking/laravel-transporter": "^3.1",
         "laravel/framework": "^10.10",
+        "laravel/octane": "^2.9",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "yajra/laravel-datatables": "^9.0"
