--- a/.env
+++ b/.env
@@ -67,3 +67,5 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 SANCTUM_STATEFUL_DOMAINS=rapidv
+
+OCTANE_SERVER=swoole
