--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_KEY=base64:xKx1cAUJfS3q5q1noWhj/CUk9t2bnrYAwV7HX1nYlUI=
 APP_DEBUG=true
-APP_URL= http://rapidv:9004 #Vite Hot Reload can access using this
-# APP_URL= http://pixelx:9004 #Vite Hot Reload can access using this
+# APP_URL= http://rapidv:9004 #Vite Hot Reload can access using this
+APP_URL= http://pixelx:9004 #Vite Hot Reload can access using this
 # APP_URL=WiseEducationV6.us-east-1.elasticbeanstalk.com
 
 
@@ -10,19 +10,19 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-# DB_CONNECTION=mysql
-# DB_HOST=192.168.1.100
-# DB_PORT=3307
-# DB_DATABASE=db_wise_education
-# DB_USERNAME=root
-# DB_PASSWORD=root
-
 DB_CONNECTION=mysql
-DB_HOST=192.168.3.5
+DB_HOST=192.168.1.100
 DB_PORT=3307
 DB_DATABASE=db_wise_education
 DB_USERNAME=root
-DB_PASSWORD=AdM!n1234*
+DB_PASSWORD=root
+
+# DB_CONNECTION=mysql
+# DB_HOST=192.168.3.5
+# DB_PORT=3307
+# DB_DATABASE=db_wise_education
+# DB_USERNAME=root
+# DB_PASSWORD=AdM!n1234*
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
