--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,19 +1,15 @@
-FROM php:8.3-fpm
+#Dockerfile for AWS Setup
 
-# Set working directory
-WORKDIR /var/www/html
+FROM public.ecr.aws/docker/library/php:8.3.10
+RUN apt-get update -y && apt-get install -y openssl zip unzip git
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+RUN apt-get update && apt-get install -y libpq-dev
+RUN docker-php-ext-install pdo pdo_pgsql
 
-# Install dependencies
-RUN apt-get update && apt-get install -y \
-    zip unzip curl libpng-dev libonig-dev libxml2-dev
+RUN php -m | grep mbstring
+WORKDIR /app
+COPY . /app
+RUN composer install
 
-# Install PHP extensions
-RUN docker-php-ext-install pdo pdo_mysql mbstring exif pcntl bcmath gd
-
-# Install Composer
-COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
-
-# Set permissions
-RUN chown -R www-data:www-data /var/www/html
-
-CMD ["php-fpm"]
+CMD php artisan serve --host=0.0.0.0 --port=8000
+EXPOSE 8000
