--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,66 +1,44 @@
-version: '3.8'
-
+version: "3"
+networks:
+  application:
+    driver: bridge
 services:
   app:
     build:
-      context: ./backend/
+      context: ./backend/.
       dockerfile: Dockerfile
-    container_name: wiseeducation
-    restart: unless-stopped
-    working_dir: /var/www/html
+    container_name: backend
+    ports:
+      - 8000:8000
     volumes:
-      - ./backend/:/var/www/html
-    networks:
-      - laravel-network
+      - ./backend:/app
     depends_on:
-      - mysql_db
-
-  mysql_db:
-    image: mysql:latest
-    container_name: wiseeducation-mysql
-    restart: unless-stopped
+      - db
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: root
-    ports:
-      - "3307:3306"
+      - DB_HOST=pgdb
     networks:
-      - laravel-network
-    volumes:
-      - mysql_data:/var/lib/mysql
-
-  phpmyadmin:
-    image: phpmyadmin:latest
-    container_name: wiseeducation-phpmyadmin
-    restart: unless-stopped
+      - application
+    entrypoint: ['/bin/sh', '-c']
+    command:
+      - |
+        composer install
+        php artisan migrate
+        php artisan serve --host=0.0.0.0 --port=8000
+  db:
+    image: postgres:15
     ports:
-      - "9001:80"
+      - "5432:5432"
+    volumes:
+      - ./data:/var/lib/mysql
     environment:
-      PMA_HOST: mysql_db
-      PMA_PORT: 3306
-    depends_on:
-      - mysql_db
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=mydb
     networks:
-      - laravel-network
-
-  # Nginx Web Server
-  nginx:
-    image: nginx:latest
-    container_name: laravel-nginx-server-v1
-    restart: unless-stopped
-    ports:
-      - "9004:80"
-    volumes:
-      - ./backend/:/var/www/html
-      - ./backend/nginx/default.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - app
-    networks:
-      - laravel-network
-
-networks:
-  laravel-network:
-    driver: bridge
-
-volumes:
-  mysql_data:
+      - application
+    container_name: pgdb
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
