--- a/backend/.env
+++ b/backend/.env
@@ -1,45 +1,55 @@
-APP_NAME=Laravel
-APP_KEY=base64:xKx1cAUJfS3q5q1noWhj/CUk9t2bnrYAwV7HX1nYlUI=
+APP_NAME=Peon
+APP_ENV=local
+APP_KEY=base64:HQX5LpXqfA81S4eZKr9YDVCjoujF3zqaMkMAA8WeJcA=
 APP_DEBUG=true
-# APP_URL= http://rapidv:9004 #Vite Hot Reload can access using this
-APP_URL= http://pixelx:9004 #Vite Hot Reload can access using this
-# APP_URL=WiseEducationV6.us-east-1.elasticbeanstalk.com
+APP_TIMEZONE=UTC
+APP_URL=http://localhost:8000
+FRONTEND_URL=http://localhost:3000
 
+APP_LOCALE=en
+APP_FALLBACK_LOCALE=en
+APP_FAKER_LOCALE=en_US
+
+APP_MAINTENANCE_DRIVER=file
+# APP_MAINTENANCE_STORE=database
+
+BCRYPT_ROUNDS=12
 
 LOG_CHANNEL=stack
+LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=192.168.1.100
-DB_PORT=3307
-DB_DATABASE=db_wise_education
-DB_USERNAME=root
-DB_PASSWORD=root
+DB_CONNECTION=pgsql
+DB_HOST=db
+DB_PORT=5432
+DB_DATABASE=mydb
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
 
-# DB_CONNECTION=mysql
-# DB_HOST=192.168.3.5
-# DB_PORT=3307
-# DB_DATABASE=db_wise_education
-# DB_USERNAME=root
-# DB_PASSWORD=AdM!n1234*
-
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+SESSION_DRIVER=database
 SESSION_LIFETIME=120
+SESSION_ENCRYPT=false
+SESSION_PATH=/
+SESSION_DOMAIN=null
+
+BROADCAST_CONNECTION=log
+FILESYSTEM_DISK=local
+QUEUE_CONNECTION=database
+
+CACHE_STORE=database
+CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
 
+REDIS_CLIENT=phpredis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
+MAIL_MAILER=log
+MAIL_HOST=127.0.0.1
+MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
@@ -52,19 +62,8 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_HOST=
-PUSHER_PORT=443
-PUSHER_SCHEME=https
-PUSHER_APP_CLUSTER=mt1
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URL=
 
 VITE_APP_NAME="${APP_NAME}"
-VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-VITE_PUSHER_HOST="${PUSHER_HOST}"
-VITE_PUSHER_PORT="${PUSHER_PORT}"
-VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
-VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
-SANCTUM_STATEFUL_DOMAINS=rapidv
