--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,7 +20,7 @@ phases:
       - docker push $ECR_REPOSITORY:latest
       - echo Running Laravel migrations and seeding...
       - cp $CODEBUILD_SRC_DIR/backend/imagedefinitions.json $CODEBUILD_SRC_DIR/
-      - docker run --rm $ECR_REPOSITORY:latest php artisan migrate:fresh --force
-      - docker run --rm $ECR_REPOSITORY:latest php artisan db:seed --force
+      #- docker run --rm $ECR_REPOSITORY:latest php artisan migrate:fresh --force
+      #- docker run --rm $ECR_REPOSITORY:latest php artisan db:seed --force
 artifacts:
   files: imagedefinitions.json
