New Docker Config | Entrypoint.sh change the root in docker/nginx.conf crate based-image to avoid duplicate Linux dependecies installation run the laravel project image

--- a/docker-compose.orig.yml
+++ b/docker-compose.orig.yml
@@ -10,10 +10,10 @@ services:
     working_dir: /var/www/html
     volumes:
       - ./:/var/www/html
+    networks:
+      - laravel-network
     depends_on:
       - mysql_db
-    ports:
-      - 8080:8080
 
   mysql_db:
     image: mysql:latest
@@ -24,6 +24,8 @@ services:
       MYSQL_DATABASE: root
     ports:
       - "3307:3306"
+    networks:
+      - laravel-network
     volumes:
       - mysql_data:/var/lib/mysql
 
@@ -38,6 +40,27 @@ services:
       PMA_PORT: 3306
     depends_on:
       - mysql_db
+    networks:
+      - laravel-network
+
+  # Nginx Web Server
+  nginx:
+    image: nginx:latest
+    container_name: laravel-nginx-server-v1
+    restart: unless-stopped
+    ports:
+      - "9004:80"
+    volumes:
+      - ./:/var/www/html
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - app
+    networks:
+      - laravel-network
+
+networks:
+  laravel-network:
+    driver: bridge
 
 volumes:
   mysql_data:
