--- a/.env
+++ b/.env
@@ -1,13 +1,14 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=prod
 APP_KEY=base64:dnmjyVzpNBRB9LVZY8lP/flcXWyTxP8KfPqPIwNTQDk=
 APP_DEBUG=true
-APP_URL=http://localhost:8080
+APP_URL=http://pixelx:8080 #Vite Hot Reload can access using this, can access the as public URL to other computer
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+#TODO: DB Connection
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
