AWS Setup | Add Dockerfile,Docker Compose,Makefile,Docker folder

--- a/.env.local
+++ b/.env.local
@@ -1,19 +1,28 @@
 APP_NAME=Laravel
-APP_ENV=prod
-APP_KEY=base64:F4HMNv1tmq4ajIzJ4zRzvj/qHOD3iZAVK5JVD8fx7nM=
-APP_DEBUG=false
-APP_URL=http://localhost
+APP_KEY=base64:xKx1cAUJfS3q5q1noWhj/CUk9t2bnrYAwV7HX1nYlUI=
+APP_DEBUG=true
+APP_URL= http://rapidv:9004 #Vite Hot Reload can access using this
+# APP_URL= http://pixelx:9004 #Vite Hot Reload can access using this
+# APP_URL=WiseEducationV6.us-east-1.elasticbeanstalk.com
+
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# DB_CONNECTION=mysql
+# DB_HOST=192.168.1.100
+# DB_PORT=3307
+# DB_DATABASE=db_wise_education
+# DB_USERNAME=root
+# DB_PASSWORD=root
+
 DB_CONNECTION=mysql
-DB_HOST=lad-prod-rds-rev2.c6lksmwieto8.us-east-1.rds.amazonaws.com
-DB_PORT=3306
-DB_DATABASE=lad-prod-rds-rev2
-# DB_USERNAME=-
-# DB_PASSWORD=-
+DB_HOST=192.168.3.5
+DB_PORT=3307
+DB_DATABASE=db_wise_education
+DB_USERNAME=root
+DB_PASSWORD=AdM!n1234*
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -24,8 +33,8 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=redis
-REDIS_PASSWORD=secret
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
@@ -51,8 +60,11 @@ PUSHER_PORT=443
 PUSHER_SCHEME=https
 PUSHER_APP_CLUSTER=mt1
 
+VITE_APP_NAME="${APP_NAME}"
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SANCTUM_STATEFUL_DOMAINS=rapidv
