--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,66 +1,16 @@
-version: '3.8'
-
+version: "3.8"
 services:
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: wiseeducation
-    restart: unless-stopped
-    working_dir: /var/www/html
-    volumes:
-      - ./:/var/www/html
-    networks:
-      - laravel-network
-    depends_on:
-      - mysql_db
-
-  mysql_db:
-    image: mysql:latest
-    container_name: wiseeducation-mysql
-    restart: unless-stopped
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: root
-    ports:
-      - "3307:3306"
-    networks:
-      - laravel-network
-    volumes:
-      - mysql_data:/var/lib/mysql
-
-  phpmyadmin:
-    image: phpmyadmin:latest
-    container_name: wiseeducation-phpmyadmin
-    restart: unless-stopped
-    ports:
-      - "9001:80"
-    environment:
-      PMA_HOST: mysql_db
-      PMA_PORT: 3306
-    depends_on:
-      - mysql_db
-    networks:
-      - laravel-network
-
-  # Nginx Web Server
-  nginx:
-    image: nginx:latest
-    container_name: laravel-nginx-server-v1
-    restart: unless-stopped
-    ports:
-      - "9004:80"
-    volumes:
-      - ./:/var/www/html
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - app
-    networks:
-      - laravel-network
-
-networks:
-  laravel-network:
-    driver: bridge
-
-volumes:
-  mysql_data:
+    api:
+        container_name: api
+        build:
+            context: .
+            target: php
+            args:
+                - APP_ENV=${APP_ENV}
+        environment:
+            - APP_ENV=${APP_ENV}
+        working_dir: /app
+        volumes:
+            - ./:/app
+        ports:
+            - 9090:9090
