--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
-    api:
-        container_name: api
+    web-api:
+        container_name: web-api
         build:
             context: .
             target: php
